2006-01-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (impl_get_embed_single):
	* embed/ephy-embed-single.c: (ephy_embed_single_init):
	* embed/ephy-embed-single.h:
	* embed/mozilla/mozilla-embed-single.cpp:

	Decouple embed single instantiation and initialisation.
	Prevents double-initialisation on startup.

	* embed/mozilla/EphyContentPolicy.cpp:
	* embed/mozilla/EphyContentPolicy.h:

	Remove embed single variable, it was unused.

2006-01-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-statusbar.c: (create_caret_indicator),
	(ephy_statusbar_init), (ephy_statusbar_new),
	(ephy_statusbar_set_caret_mode):
	* src/ephy-statusbar.h:
	* src/ephy-window.c: (browse_with_caret_notifier):

	Add caret mode indicator UI. Bug #145581.

2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-menu.c
	
	Do not add OpenTabs action if too-few items in the menu.
	Bug #327390.

2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	
	Removed inappropriate bold and mnemonic.
	Bug #327401.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/prefs-dialog.c: (row_is_separator), (setup_fonts_dialog),
	(create_autodetectors_combo), (prefs_dialog_init):
	
	Put "Off" at the top of the combo, followed by a separator row.
	Bug #125723.

2006-01-17  Crispin Flowerday  <gnome@flowerday.cx>

	* lib/widgets/ephy-node-view.c (ephy_node_view_add_column): 

	When adding a column that can be sorted on, re-create the
	sort model, so that it sets up the sort method correctly.
	Fixes bug #320686

2006-01-17  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-embed-event.c: (ephy_embed_event_get_property):
	* embed/ephy-embed-event.h:
	* embed/mozilla/mozilla-embed-event.cpp:
	* src/ephy-tab.c: (save_property_url),
	(ephy_tab_dom_mouse_click_cb):
	* src/ephy-window.c: (update_popups_tooltips), (show_embed_popup):
	* src/epiphany.defs:
	* src/epiphany.override: