@@ -1,3 +1,10 @@
+2006-01-21  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/window-commands.c: (window_cmd_help_about):
+
+	Add licence to about dialogue. Patch by Brian Pepple,
+	bug #327998.
+
 2006-01-18  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/ephy-embed-shell.c: (impl_get_embed_single):
